--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,21 @@
-name: Deploy to GitHub Pages
+name: Deploy to Netlify
 
 on:
   push:
-    branches:
-      - main  # Or use your specific branch
-
-permissions:
-  contents: write  # Grant permission to write to repository contents
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Replace API_KEY in script.js
-      run: |
-        # Replace 'API_KEY' in both script.js files with the value from GitHub Secrets
-        sed -i 's/const API_KEY = "API_KEY";/const API_KEY = "${{ secrets.MY_API_KEY }}";/' v1/movies/script.js
-        sed -i 's/const API_KEY = "API_KEY";/const API_KEY = "${{ secrets.MY_API_KEY }}";/' v1/shows/script.js
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        publish_dir: ./  # This is where your static files are located
-        user_name: 'github-actions'
-        user_email: 'github-actions@users.noreply.github.com'
-        publish_branch: gh-pages  # Branch to push the changes to
-        github_token: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token for authentication
+      - uses: actions/checkout@v2
+      
+      - name: Deploy to Netlify
+        uses: netlify/actions/cli@master
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          MY_API_KEY: ${{ secrets.MY_API_KEY }}
+        with:
+          args: deploy --dir=v1 --functions=functions --prod
+          secrets: '["MY_API_KEY"]'
