--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,23 @@
-name: Deploy to Netlify
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Generate API Key File
+        run: |
+          # Create a basic "encryption" of the API key (base64)
+          ENCODED_KEY=$(echo -n ${{ secrets.MY_API_KEY }} | base64)
+          echo "const ENCRYPTED_KEY = '$ENCODED_KEY';" > v1/api-key.js
       
-      # Use the official Netlify CLI action
-      - name: Install Netlify CLI
-        run: npm install -g netlify-cli
-        
-      - name: Deploy to Netlify
-        run: netlify deploy --dir=v1 --functions=functions --prod
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          MY_API_KEY: ${{ secrets.MY_API_KEY }}
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: v1 # The folder to deploy
